--- a/MonoUI/Resources.resx
+++ b/MonoUI/Resources.resx
@@ -118,7 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="BasicFont" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="CheckBox_Checked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CheckBox_Checked.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="CheckBox_Unchecked" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CheckBox_Unchecked.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Font_Arial_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Font_Arial_10.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Font_Arial_12" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\debugFont.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Font_Arial_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\guifont.xnb;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
